Compiler_Project/rsc/tests/typecheck/invalid/3if_int.ml
let x = if 3 then 3 else 4 in
print_int x
